--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <nav class="navbar">
         <div class="logo">
-            <a href="#">El/Sazón</a>
+            <a href="#">El Sazón</a>
         </div>
         <ul class="nav-links">
+            <li><a href="#hero">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#menu">Menu</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
         <div class="burger">
@@ -25,7 +25,7 @@
     </nav>
 
     <!-- Main content area -->
-    <main class="hero-section">
+    <main class="hero-section" id="hero">
         <div class="hero-content">
             <h1 class="headline">Authentic Mexican Flavors in Every Bite</h1>
             <p class="sub-headline">Experience the rich traditions of Mexico through our handcrafted dishes, made with love and generations-old recipes</p>
@@ -35,7 +35,7 @@
             <img src="assets/hero-tacos.jpg" alt="Assorted authentic Mexican tacos with lime and salsa" class="main-image">
         </div>
     </main>
-    <section class="about-section">
+    <section class="about-section" id="about">
         <div class="about-content">
             <h2 class="about-headline">Our Story</h2>
             <p class="about-text">
@@ -60,7 +60,7 @@
             </div>
         </div>
     </section>
-    <section class="contact-section">
+    <section class="contact-section" id="contact">
         <h2 class="contact-headline">Contact Us</h2>
         <form class="contact-form" action="#" method="post">
             <div class="form-group">
